@@ -1,4 +1,4 @@
-$Id: README,v 1.2 2000-01-20 17:27:55 maire Exp $
+$Id: README,v 1.3 2001-03-26 17:34:22 maire Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -59,9 +59,12 @@ $Id: README,v 1.2 2000-01-20 17:27:55 maire Exp $
  		Idle> exit
  		
  	- visualize the histogram
- 		paw> h/file 1 testem4.histo
+ 		paw> h/file 1 testem4.paw
  		paw> option stat
  		paw> option logy
  		paw> h/pl 1 	
  	  
+  
+ Note that, for time being (on 26.03.2001), the histograms in G4
+ are disabled  wia the cpp flag g4nohist := true in the gnumakefile 
  	
