@@ -1,4 +1,4 @@
-$Id: History,v 1.8 2001-02-21 10:14:38 maire Exp $
+$Id: History,v 1.9 2001-03-26 17:34:22 maire Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,6 +16,7 @@ track of all tags.
      ----------------------------------------------------------
 21-02-01  mma (testem4-V03-00-03)
           - hbook histograms restored
+	  - set cppflag G4NOHIST = true in gnumakefile
 	       
 20-02-01  mma (testem4-V03-00-02)
           - verbose stepping adapted for STL
